--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@prisma/client": "^6.16.3",
+    "@hookform/resolvers": "^5.2.2",
+    "@prisma/client": "^6.17.1",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
@@ -20,8 +24,10 @@
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.65.0",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -34,7 +40,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
     "postcss": "^8.5.6",
-    "prisma": "^6.16.3",
+    "prisma": "^6.17.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
